deploy dialect e index.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,10 @@ server.port=${PORT:5000}
 ## Hibernate Properties
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Postgres Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL93Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL93Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
